[package]
name = "solana-dalek-test"
description = "Solana Dalek Test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures = "0.3"
solana-client = { version = "2.1.0", path = "../client" }
solana-logger = { version = "2.1.0", path = "../logger" }
solana-rpc-client = { version = "2.1.0", path = "../rpc-client" }
solana-sdk = { version = "2.1.0", path = "../sdk" }
solana-test-validator = { version = "2.1.0", path = "../test-validator" }
solana-zk-token-sdk = { version = "2.1.0", path = "../zk-token-sdk" }
tokio = "1.38"

[[bin]]
name = "solana-dalek-test"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
