[package]
name = "solana-rpc-test"
description = "Solana RPC Test"
documentation = "https://docs.rs/solana-rpc-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
agave-unstable-api = []

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-tpu-client-next = { workspace = true, features = ["websocket-node-address-service"] }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
agave-logger = { path = "../logger", features = ["agave-unstable-api"] }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-transaction = { workspace = true }
solana-test-validator = { workspace = true, features = ["agave-unstable-api", "dev-context-only-utils"] }
solana-transaction = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
